--- a/babla-vvip-tools-4in1.html
+++ b/babla-vvip-tools-4in1.html
@@ -51,8 +51,8 @@ body, html {
 </head>
 <body>
 
-<button class="tablink" onclick="openPage('Home', this, 'red')" id="defaultOpen">Single</button>
-<button class="tablink" onclick="openPage('News', this, 'green')">Collage(crop)</button>
+<button class="tablink" onclick="openPage('Home', this, 'red')">Canvas</button>
+<button class="tablink" onclick="openPage('News', this, 'green')" id="defaultOpen">Collage(crop)</button>
 <button class="tablink" onclick="openPage('Contact', this, 'blue')">Collage(stretch)</button>
 <button class="tablink" onclick="openPage('About', this, 'orange')">Batch (stack)</button>
 
@@ -61,8 +61,8 @@ body, html {
 <button class="tablink" onclick="openPage('Saikat', this, 'black')">No Caption</button>
 
 <div id="Home" class="tabcontent">
-  <h1>Vvip Image Creator Pro (single) ++</h1>
-						<iframe src="https://saikat-0.github.io/single-img.html" title="single" style="width: 100%; height: 100%; border: none;"></iframe>
+    <h1></h1>
+						<iframe src="https://saikat-0.github.io/vvipimg.html" title="single" style="width: 100%; height: 108%; border: none;"></iframe>
 </div>
 
 <div id="News" class="tabcontent">
