--- a/vvipimg.html
+++ b/vvipimg.html
@@ -1013,10 +1013,10 @@
       if (document.getElementById('watermarkCheckbox').checked) {
         addWatermark(ctx, tempCanvas);
       }
-      const downloadDataUrl = await compressImage(tempCanvas, 50 * 1024);
+      const downloadDataUrl = await compressImage(tempCanvas, 40 * 1024);
       const downloadLink = document.createElement('a');
       downloadLink.href = downloadDataUrl;
-      downloadLink.download = `VvipTimes_${caption.replace(/\s+/g, '_')}.webp`;
+      downloadLink.download = `${caption.replace(/\s+/g, '_')}.webp`;
       document.body.appendChild(downloadLink);
       downloadLink.click();
       document.body.removeChild(downloadLink);
