--- a/img-collage-crop.html
+++ b/img-collage-crop.html
@@ -247,12 +247,12 @@
   
   <!-- Add checkboxes for watermark and caption -->
   <label>
-    <input type="checkbox" id="captionToggle" checked>
+    <input type="checkbox" id="captionToggle">
     Caption
   </label>
   
   <label>
-    <input type="checkbox" id="watermarkToggle" checked>
+    <input type="checkbox" id="watermarkToggle">
     Watermark
   </label>
   
