--- a/img-collage-stretch.html
+++ b/img-collage-stretch.html
@@ -435,10 +435,10 @@
               />
               
               <label>
-  <input type="checkbox" id="toggleWatermark" defaultChecked /> Watermark
+  <input type="checkbox" id="toggleWatermark" /> Watermark
 </label>
 <label>
-  <input type="checkbox" id="toggleCaption" defaultChecked /> Caption
+  <input type="checkbox" id="toggleCaption" /> Caption
 </label>
 
               
