--- a/Single-img-retain-old-pixels.html
+++ b/Single-img-retain-old-pixels.html
@@ -241,10 +241,10 @@
             
             <!-- Add checkboxes for toggling watermark and caption -->
             <label>
-                <input type="checkbox" id="toggleWatermark" checked> Add Watermark
+                <input type="checkbox" id="toggleWatermark"> Add Watermark
             </label>
             <label>
-                <input type="checkbox" id="toggleCaption" checked> Add Caption
+                <input type="checkbox" id="toggleCaption"> Add Caption
             </label>
             
             <button type="button" id="downloadButton">Download Image</button>
