--- a/img-stack.html
+++ b/img-stack.html
@@ -237,7 +237,7 @@
         caption: '',
         loading: false,
         notification: '',
-        showWatermark: false,  // Add this line
+        showWatermark: true,  // Add this line
         showCaption: true,   
       };
 
