--- a/img-stack.html
+++ b/img-stack.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Multi Image Creator Pro ++ (Enhanced)</title>
+    <title>Vvip Times Multi Image Creator Pro ++ (Enhanced)</title>
     <style>
       body {
         font-family: 'Segoe UI', sans-serif;
@@ -237,8 +237,8 @@
         caption: '',
         loading: false,
         notification: '',
-        showWatermark: false,  // Add this line
-        showCaption: false,   
+        showWatermark: true,  // Add this line
+        showCaption: true,   
       };
 
       const reducer = (state, action) => {
