--- a/canva.html
+++ b/canva.html
@@ -129,7 +129,7 @@
 
   /* Canvas Container */
   .canvas-container {
-    margin: 6px 0;
+    margin: 6px 10px;
     display: flex;
     justify-content: center;
     align-items: center;
