--- a/canva2.html
+++ b/canva2.html
@@ -117,7 +117,7 @@
             color: #fff;
             transition: border-color var(--transition-duration);
             flex-grow: 1;
-            min-width: 80px;
+            min-width: 70px;
             height: 35px;
             touch-action: manipulation;
         }
@@ -135,7 +135,7 @@
 
         /* Canvas Container */
         .canvas-container {
-            margin: 6px 10px 6px 10px; /* Added left margin */
+            margin: 6px 10px; /* Added left margin */
             display: flex;
             justify-content: center;
             align-items: center;
