--- a/canva2.html
+++ b/canva2.html
@@ -135,7 +135,7 @@
 
         /* Canvas Container */
         .canvas-container {
-            margin: 6px 10px; /* Added left margin */
+            margin: 6px 0; /* Added left margin */
             display: flex;
             justify-content: center;
             align-items: center;
