--- a/canva2.html
+++ b/canva2.html
@@ -424,22 +424,8 @@
             }
         }
 
-        @media (max-width: 480px) {
-            .toolbar {
-                padding: 2px;
-                gap: 1px;
-            }
-            .input-field {
-                min-width: 50px;
-                font-size: 12px;
-                height: 24px;
-            }
-            button, label {
-                font-size: 12px;
-                padding: 4px;
-                height: 24px;
-                min-width: 24px;
-            }
+        @media (max-width: 480px) 
+            
             .context-menu {
                 transform: scale(0.85);
             }
