--- a/canva2.html
+++ b/canva2.html
@@ -381,7 +381,7 @@
                 padding: 2px 4px;
                 gap: 2px;
                 height: auto;
-                flex-wrap: wrap;
+                flex-wrap: nowrap;
             }
             .input-field {
                 min-width: 60px;
@@ -428,6 +428,13 @@
             
             .context-menu {
                 transform: scale(0.85);
+            }
+            .canvas-container {
+                margin: 10px 0;
+            }
+            #imageCanvas {
+                max-width: 95vw;
+                max-height: 60vh;
             }
             .context-menu-item {
                 width: 36px;
