--- a/canva3.html
+++ b/canva3.html
@@ -38,7 +38,7 @@
         }
 
         .canvas-container {
-            margin: 10px;
+            margin: 10px 0 0 0;
             display: flex;
             justify-content: center;
             align-items: center;
