--- a/canva3.html
+++ b/canva3.html
@@ -38,8 +38,9 @@
         }
 
         .canvas-container {
-            margin: 10px 0 0 0;
+            margin: 0 0 0 10px;
             display: flex;
+            top:10px;
             justify-content: center;
             align-items: center;
             position: relative;
