--- a/canva3.html
+++ b/canva3.html
@@ -27,6 +27,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            align-content: flex-start;
             background-color: var(--background-color);
             color: #fff;
             overflow-x: hidden;
