--- a/canva3.html
+++ b/canva3.html
@@ -41,8 +41,7 @@
             
             display: flex;
             justify-content: center;
-            align-items: flex-start;
-            position: absolute;
+            position: relative;
             transition: all var(--transition-duration);
             touch-action: manipulation;
             flex: 1;
