--- a/canva3.html
+++ b/canva3.html
@@ -22,7 +22,7 @@
 
         body {
             font-family: 'Lato', -apple-system, BlinkMacSystemFont, sans-serif;
-            margin: 0;
+            margin: 10px 0 0 0;
             padding: 0;
             display: flex;
             flex-direction: column;
