--- a/canva3.html
+++ b/canva3.html
@@ -48,7 +48,6 @@
         }
 
         #imageCanvas {
-            margin: 0 0 0 10px;
             border: 2px solid var(--canvas-border);
             background: #fff;
             cursor: crosshair;
@@ -68,6 +67,7 @@
             display: flex;
             flex-direction: column;
             width: 100%;
+            margin-top: 10px;
             padding: 10px;
             box-sizing: border-box;
             gap: 10px;
@@ -94,7 +94,7 @@
             border: none;
             border-radius: var(--radius);
             padding: 15px 20px;
-            font-size: 24px;
+            font-size: 30px;
             cursor: pointer;
             transition: all var(--transition-duration);
             display: flex;
@@ -138,7 +138,7 @@
             border: none;
             border-radius: var(--radius);
             padding: 18px 25px;
-            font-size: 24px;
+            font-size: 30px;
             cursor: pointer;
             transition: all var(--transition-duration);
             display: flex;
