--- a/canva5.html
+++ b/canva5.html
@@ -92,14 +92,14 @@
             border: none;
             border-radius: 50%;
             padding: 15px;
-            font-size: 40px;
+            font-size: 65px;
             cursor: pointer;
             transition: all var(--transition-duration);
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 70px;
-            height: 70px;
+            width: 100px;
+            height: 100px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             touch-action: manipulation;
             position: relative;
@@ -122,14 +122,14 @@
             border: none;
             border-radius: 50%;
             padding: 15px;
-            font-size: 55px;
+            font-size: 80px;
             cursor: pointer;
             transition: all var(--transition-duration);
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 80px;
-            height: 80px;
+            width: 125px;
+            height: 125px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             touch-action: manipulation;
         }
@@ -144,15 +144,15 @@
             padding: 12px 15px;
             border: 1px solid var(--canvas-border);
             border-radius: 30px;
-            font-size: 18px;
+            font-size: 36px;
             background: #2a2c31;
             color: #fff;
             transition: border-color var(--transition-duration);
             flex-grow: 1;
             max-width: 95%;
-            height: 50px;
+            height: 75px;
             touch-action: manipulation;
-            text-align: center;
+            text-align: left;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
 
@@ -169,10 +169,10 @@
             background: var(--button-bg);
             border-radius: 50%;
             padding: 15px;
-            width: 80px;
-            height: 80px;
+            width: 120px;
+            height: 120px;
             color: white;
-            font-size: 60px;
+            font-size: 80px;
             cursor: pointer;
             transition: all var(--transition-duration);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -523,20 +523,9 @@
         .hidden {
             display: none;
         }
-
-        @media (max-width: 768px) {
-            .mobile-button {
-                width: 80px;
-                height: 80px;
-                font-size: 60px;
-            }
-            .caption-input {
-                font-size: 16px;
-                height: 45px;
-            }
-        }
-
         
+       
+
     </style>
 </head>
 <body>
